--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cashfreepayments/cashfree-js": "^1.0.5",
     "@nextui-org/date-picker": "^2.1.2",
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
@@ -24,6 +25,7 @@
     "react": "^18",
     "react-datepicker": "^7.1.0",
     "react-dom": "^18",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-toastify": "^10.0.5",
     "resend": "^3.4.0",
