--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
+    "react-player": "^2.16.0",
     "react-toastify": "^10.0.5",
     "resend": "^3.4.0",
     "swiper": "^11.2.2",
